Add sourcelink support and update assembly references for ArzTiServer
- Created sourcelink JSON file for better debugging experience.
- Added ArzTiServer.dll and refint versions for .NET 8.0.
- Updated assembly metadata including versioning and trust information.

--- a/ArzTiServer.Api/src/ArzTiServer.Api/ArzTiServer.Api.Contracts.csproj
+++ b/ArzTiServer.Api/src/ArzTiServer.Api/ArzTiServer.Api.Contracts.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ArzTiServer.Domain\ArzTiServer.Domain.csproj" />
+  </ItemGroup>
 </Project>
